--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "dependencies": {
     "soap": "^0.11.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^2.3.4"
+  },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
