--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "RWTH Courses: a better CampusOffice for everybody!",
   "main": "index.js",
   "dependencies": {
+    "chai": "^3.4.1",
     "debug": "^2.2.0",
     "debug-logger": "^0.4.1",
     "mongodb": "^2.1.4",
