--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "chai": "^3.4.1",
     "debug": "^2.2.0",
     "debug-logger": "^0.4.1",
+    "express": "^4.13.4",
+    "http2": "^3.3.2",
     "material-design-icons": "^2.1.3",
     "mongodb": "^2.1.4",
     "rx": "^4.0.7",
