--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http2": "^3.3.2",
     "material-design-icons": "^2.1.3",
     "mongodb": "^2.1.4",
+    "mongoose": "^4.3.7",
     "rx": "^4.0.7",
     "soap": "^0.11.4"
   },
