--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "material-design-icons": "^2.1.3",
     "mongoose": "^4.3.7",
     "rx": "^4.0.7",
-    "soap": "^0.11.4"
+    "soap": "^0.11.4",
+    "striptags": "^2.1.1"
   },
   "devDependencies": {
     "istanbul": "^0.4.2",
